<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button android:id ="@+id/dialogAl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogAl" />
    
    <Button android:id ="@+id/dialogConf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogConf" />
    
    <Button android:id ="@+id/dialogSel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogSel" />
    
    <Button android:id ="@+id/dialogSingle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogSingle" />
    
    <Button android:id ="@+id/dialogMulti"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogMulti" />

</LinearLayout>